--- a/hiphop_bot/.gitignore
+++ b/hiphop_bot/.gitignore
@@ -76,9 +76,9 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+/src/data/tensorboard/
 *.csv
 *.zip
-
+/models/
 # Mac OS-specific storage files
 .DS_Store
