--- a/hiphop_bot/.gitignore
+++ b/hiphop_bot/.gitignore
@@ -78,6 +78,8 @@ target/
 # exclude data from source control by default
 /src/data/tensorboard/
 *.mp3
+*.txt
+*.png
 /models/
 # Mac OS-specific storage files
 .DS_Store
